--- a/css/nguyen.css
+++ b/css/nguyen.css
@@ -181,8 +181,8 @@ a.linkedin:hover {
   color: #0072b1;
 }
 
-a.farcaster:hover {
-  color: #7157b8;
+a.instagram:hover {
+  color: #c43379;
 }
 
 a.twitter:hover {
